public/style.css
body {
  font-family: sans-serif;
  background-color: white
}

#authForm {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-size: 4vh
}

#authFormChild {
  height: 5vh;
  width: 20vw;
  font-size: 4vh
}

#authFormInput {
  height: 5vh;
  width: 20vw;
  font-size: 4vh
}

#loginButton {
  font-size: 3vh;
  padding: 5% 50% 5% 50%;
  border-radius: 4%;
  margin-left: 50%;
  transform: translateX(-50%);
  background-color: rgb(51, 138, 224);
  color: white
}

a {
  text-decoration: none;
}

label {
  display: block;
}

nav {
  background-color: rgb(51, 138, 224);
}

nav a {
  display: inline-block;
  align-self: flex-end;
  margin: 1em;
  color: white;
}

#navBarFlex {
  display: flex;
  justify-content: end;
  padding-right: 50px;
  font-size: 1.5vh
}

#homeContainer a {
  display: inline-block;
}

form div {
  margin: 1em;
  display: inline-block;
}

#nameOfAppHeader {
  color:  rgb(51, 138, 224);
}

#contactListOutermostComponentContainer {
  display: flex;
  padding: 0 0 0 0;
  margin: 0 0 0 0;
  width: 100vw;
  height: 100vw;

}

#contactListComponentContainer {
  padding: 0 0 0 0;
  margin: 0 0 0 -7px;
  height: 100vh;
  flex-basis: 10%;
  /* display: grid;
  grid-template-areas: 
    "contactList messageAndTextFormDiv";
  grid-template-columns: 1fr 3fr; */
  display: flex;
}

#contactListSearchBar {
  font-size: 20px;
  margin-left: 50%;
  transform: translateX(-50%);
}

#contactContainer {
display: flex;
flex-direction: column;
padding: 0 0 0 0;
margin: 0 0 0 0;
width: 15%;
border-right: 3px solid gray;
height: 85vh;
  /* width: 100%; */
}


.hide {
  display: none
}


#contactName {
  padding: 0 0 0 0;
  margin: 10px 0 10px 0;
  font-size: 1.1em;
  align-self: center
}

#mostRecentMessage {
  align-self: center;
  width: 60ch;
  word-wrap: break-word;
  padding: 0 0 0 10px;
  color: gray;
  overflow: hidden;
}

.sentMessageMostRecent {
  box-sizing: content-box;
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
  max-width: 60ch;
  padding: 1em 1.5em;
  background-color: rgb(51, 138, 224);
  color: white;
  margin: 5px;
  position: relative;
  left: 50%;
  border-radius: 30px;
  word-break: "break-word"
}

.receivedMessageMostRecent {
  list-style-type: none;
  width: 60ch;
  padding: 1em 1.5em;
  background-color: lightgray;
  color: white;
  margin: 5px;
  left: 50%;
  border-radius: 30px;
  word-break: "break-word"
}

.sentMessage {
  box-sizing: content-box;
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
  max-width: 45%;
  padding: 1em 1.5em;
  background-color: rgb(51, 138, 224);
  color: white;
  margin: 5px;
  position: relative;
  left: 45%;
  border-radius: 30px;
  display: flex;
  justify-content: start;
  padding-left: 30px;
  word-break: break-word;
  font-size: 18px
}

.sentTemporary {
  list-style-type: none;
  max-width: 45%;
  padding: 1em 1.5em;
  background-color:  rgb(51, 138, 224);
  color: white;
  margin: 5px;
  position: relative;
  left: 45%;
  border-radius: 30px;
  display: flex;
  justify-content: start;
  padding-left: 30px;
  font-size: 18px;
  word-break: break-word
}

.receivedMessage {
  list-style-type: none;
  max-width: 45%;
  padding: 1em 1.5em;
  background-color: lightgray;
  color: white;
  margin: 5px;
  left: 50%;
  border-radius: 30px;
  display: flex;
  justify-content: end;
  padding-right: 30px;
  word-break: break-word;
  font-size: 18px
}

.receivedTemporary {
  list-style-type: none;
  max-width: 45%;
  padding: 1em 1.5em;
  background-color: lightgray;
  color: white;
  margin: 5px;
  border-radius: 30px;
  left: 40%;
  display: flex;
  justify-content: end;
  padding-right: 30px;
  font-size: 18px;
  word-break: break-word
}



  
  
  #textInput {
    margin-left: 10vw;
    font-size: 25px;
    padding: 5px 5px 5px 5px;
    width: 50vw;
    word-wrap: break-word;
    background-color: white;
  }
  
  #sendButton {
    height: 75px;
    width: 75px;
    border-radius: 10px;
    background-color:  rgb(51, 138, 224);
    color: white
  }
  

